# double_sparse_kernel

./: .gitignore  README.md  bench_kernel.py  convert_legacy_format.py  doublesparse.py  inference_demo.py  llama.py  llama_inference.py  modelutils.py  results.txt  run.sh
inference_lib/: MANIFEST.in  setup.cfg
inference_lib/src/: dbg.py
inference_lib/src/double_sparse_compression/: __init__.py  inference.py
inference_lib/src/double_sparse_compression/inference_kernels/: CMakeLists.txt  __init__.py  bench.cpp  common.cuh  cuda_kernel.py  doublesparse_cuda.cpp  doublesparse_cuda_kernel.cu  doublesparse_external.cu  doublesparse_fp8.cu  kernel_selector.py  main.cu  tensor_dump.py
inference_lib/src/double_sparse_compression/inference_kernels/spops/: results.txt  setup.py
inference_lib/src/double_sparse_compression/inference_kernels/spops/spops/: spops_backend.cpp
inference_lib/src/double_sparse_compression/inference_kernels/spops/spops/lib/: shuffler_spops_kernels.cu  sputnik_spops.cpp  sputnik_spops_kernels.cu  structure_aware_spops_kernels.cu
inference_lib/src/double_sparse_compression/inference_kernels/spops/spops/lib/sputnik/sddmm/: cuda_sddmm.cu.cc
inference_lib/src/double_sparse_compression/inference_kernels/spops/spops/lib/sputnik/spmm/: cuda_spmm.cu.cc
other_experiments/: OBC-x2.ipynb  OBC-x3.ipynb  OBC-x4.ipynb  Prune-resnet50-double sparse-params-0.8-longer.ipynb  Prune-resnet50-double sparse-params-0.9-longer.ipynb  Prune-resnet50-params-0.8-longer.ipynb  Prune-resnet50-params-0.9-longer.ipynb
tests/: test.py
